crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_arithmetic-7.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(r#\"A * (B + C)\"#)"
---
TypeAnn {
    kind: Binary(
        BinaryTypeAnn {
            left: TypeAnn {
                kind: TypeRef(
                    "A",
                    None,
                ),
                span: 0..1,
                inferred_type: None,
            },
            op: Times,
            right: TypeAnn {
                kind: Binary(
                    BinaryTypeAnn {
                        left: TypeAnn {
                            kind: TypeRef(
                                "B",
                                None,
                            ),
                            span: 5..6,
                            inferred_type: None,
                        },
                        op: Plus,
                        right: TypeAnn {
                            kind: TypeRef(
                                "C",
                                None,
                            ),
                            span: 9..10,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..0,
                inferred_type: None,
            },
        },
    ),
    span: 0..0,
    inferred_type: None,
}
