crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_conditional_type.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"if (T: U) { never } else { T }\")"
---
TypeAnn {
    kind: Condition(
        ConditionType {
            check: TypeAnn {
                kind: TypeRef(
                    "T",
                    None,
                ),
                span: 4..5,
                inferred_type: None,
            },
            extends: TypeAnn {
                kind: TypeRef(
                    "U",
                    None,
                ),
                span: 7..8,
                inferred_type: None,
            },
            true_type: TypeAnn {
                kind: Never,
                span: 12..17,
                inferred_type: None,
            },
            false_type: TypeAnn {
                kind: TypeRef(
                    "T",
                    None,
                ),
                span: 27..28,
                inferred_type: None,
            },
        },
    ),
    span: 0..2,
    inferred_type: None,
}
