crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_func_with_rest_param.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"fn (...args: Array<number>) -> number\")"
---
TypeAnn {
    kind: Function(
        FunctionType {
            span: 0..37,
            type_params: None,
            params: [
                TypeAnnFuncParam {
                    pattern: Pattern {
                        kind: Rest(
                            RestPat {
                                arg: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "args",
                                            span: 7..11,
                                            mutable: false,
                                        },
                                    ),
                                    span: 7..11,
                                    inferred_type: None,
                                },
                            },
                        ),
                        span: 4..7,
                        inferred_type: None,
                    },
                    type_ann: TypeAnn {
                        kind: TypeRef(
                            "Array",
                            Some(
                                [
                                    TypeAnn {
                                        kind: Number,
                                        span: 19..25,
                                        inferred_type: None,
                                    },
                                ],
                            ),
                        ),
                        span: 13..26,
                        inferred_type: None,
                    },
                    optional: false,
                },
            ],
            ret: TypeAnn {
                kind: Number,
                span: 31..37,
                inferred_type: None,
            },
            throws: None,
        },
    ),
    span: 0..2,
    inferred_type: None,
}
